Initial version to display to customer

--- a/components/index_products/index_products.wxml
+++ b/components/index_products/index_products.wxml
@@ -6,37 +6,37 @@
 <view class="products-section">
   <view class="product-block">
     <image src="../../images/products/1.jpg" class="product-img" />
-    <view class="product-price">
+    <!-- <view class="product-price">
       外套
       ¥3999.00
-    </view>
+    </view> -->
   </view>
   <view class="product-block">
     <image src="../../images/products/2.jpg" class="product-img" />
-    <view class="product-price">
+    <!-- <view class="product-price">
       外套
       ¥3999.00
-    </view>
+    </view> -->
   </view>
   <view class="product-block">
     <image src="../../images/products/3.jpg" class="product-img" />
-      <view class="product-price">
+      <!-- <view class="product-price">
       外套
       ¥3999.00
-      </view>
+      </view> -->
   </view>
   <view class="product-block">
     <image src="../../images/products/4.jpg" class="product-img" />
-    <view class="product-price">
+    <!-- <view class="product-price">
       外套
       ¥3999.00
-    </view>
+    </view> -->
   </view>
   <view class="product-block">
     <image src="../../images/products/5.jpg" class="product-img" />
-    <view class="product-price">
+    <!-- <view class="product-price">
       外套
       ¥3999.00
-    </view>
+    </view> -->
   </view>
 </view>
